# SimpleVitisCMake

./: CMakeLists.txt  readme.md
src/kernels/: mykernel1.cpp  mykernel2.cpp
